successfully seed demo user

--- a/server/sample.env
+++ b/server/sample.env
@@ -1,3 +1,6 @@
 JWT_SECRET=
 MONGO_URI=
 TEAM_NAMES=Bonnie,Sina
+DEMO_USER_NAME=demoUser
+DEMO_USER_EMAIL=demoUser@gmail.com
+DEMO_USER_PASSWORD=demoUserPassword
