--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,16 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "seed": " env-cmd -f ./.env node seeds/demoSeed.js"
   },
+  
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.2.0",
     "express-validator": "^6.13.0",
